deleted:    .config.ini.un~ 	modified:   StartUp.lnk 	modified:   config.ini 	modified:   main.py 	modified:   setting.exe 	modified:   setting.py 	renamed:    main.spec -> setting.spec 	modified:   setting.ui 	modified:   startup.py 	deleted:    startup.py~ 	modified:   ui_setting.py

--- a/setting.ui
+++ b/setting.ui
@@ -56,6 +56,16 @@
      </layout>
     </item>
     <item>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="text">
+       <string>开机自启</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
        <string>保存设置(重启后生效)</string>
